force-app/main/default/objects/RRMember__c/RRMember__c.object-meta.xml
<CustomObject>
    <label>RRMember</label>
    <nameField>
        <displayFormat>RR-{0000}</displayFormat>
        <label>RRMember Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>RRMembers</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>