force-app/main/default/objects/RRMember__c/fields/LastAssignmentTime__c.field-meta.xml
<CustomField>
    <fullName>LastAssignmentTime__c</fullName>
    <label>LastAssignmentTime</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>