force-app/main/default/objects/RRMember__c/fields/MemberId__c.field-meta.xml
<CustomField>
    <fullName>MemberId__c</fullName>
    <displayFormat>{0000}</displayFormat>
    <label>MemberId</label>
    <type>AutoNumber</type>
</CustomField>